@@ -2,10 +2,13 @@ from __future__ import print_function
 from six.moves import input
 
 
-def main():
+def get_input():
     data = input('')
-
     return data
+
+
+def main():
+    print(get_input())
 
 
 if __name__ == '__main__':
